--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </header>
-    <!-- <section class="preview">
+    <section class="preview">
         <div class="container">
             <div class="preview__content">
                 
@@ -63,8 +63,8 @@
                     </div>
                 </div>
             </div>
-        </section>     -->
-        <!-- <section class="about-me">
+        </section>    
+        <section class="about-me">
             <div class="container">
                 <h6 class="visually-hidden"></h6>
                 <div class="about-me__content">
@@ -77,8 +77,8 @@
                     </div>
                 </div>
             </div>
-        </section> -->
-        <!-- <section class="my-skills">
+        </section>
+        <section class="my-skills">
             <div class="container"></div>
             <div class="my-skills__content">
                 <div class="wrapper-context-title">
@@ -127,8 +127,8 @@
                     </div>
                 </div>
             </div>
-        </section> -->
-        <!-- <section class="my-works">
+        </section>
+        <section class="my-works">
             <div class="container">
                 <div class="my-works__content">
                     <div class="wrapper-context-title">
@@ -195,8 +195,8 @@
                     </div>
                 </div>
             </div>
-        </section> -->
-    <!-- <footer class="footer">
+        </section>
+    <footer class="footer">
         <div class="container">
             <div class="footer__content">
                 <div class="footer__description">
@@ -284,6 +284,6 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
