feated: adaptive about me

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                 <h6 class="visually-hidden"></h6>
                 <div class="about-me__content">
                     <div class="accessory">
-                        <div class="acsessory__shadow acsessory__shadow--first"></div>
-                        <div class="acsessory__shadow acsessory__shadow--second"></div>
+                        <img src="./image/logo/picture.png" alt="Picture">
                     </div>
                     <div class="about-me__description">
                         <p>A few years ago, I became interested in developing websites and interfaces. Since then, I have been steadily improving my skills. Now I am developing websites and web applications to order or for myself.</p>
