feat: adaptive preview for mobile

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </button>
         </div>
     </header>
-    <!-- <section class="preview">
+    <section class="preview">
         <div class="container">
             <div class="preview__content">
                 
@@ -66,6 +66,7 @@
                 <div class="avatar">
                     <div class="avatar__background">
                         <picture>
+                            <source srcset="./image/preview/avatar-background-mobile.png" media="(max-width: 662px)">
                             <img srcset="./image/preview/avatar-background-desktop.png" alt="bg">
                         </picture>
                     </div>
@@ -81,7 +82,7 @@
                     </div>
                 </div>
             </div>
-        </section>     -->
+        </section>    
         <!-- <section class="about-me">
             <div class="container">
                 <h6 class="visually-hidden"></h6>
