feat: adaptive aboyt me for mobile

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </section>    
-        <!-- <section class="about-me">
+        <section class="about-me">
             <div class="container">
                 <h6 class="visually-hidden"></h6>
                 <div class="about-me__content">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- <section class="my-skills">
             <div class="container"></div>
             <div class="my-skills__content">
