feat: adaptive my skills for modile

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="my-skills">
+        <section class="my-skills">
             <div class="container"></div>
             <div class="my-skills__content">
                 <div class="wrapper-context-title">
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- <section class="my-works">
             <div class="container">
                 <div class="my-works__content">
