feat: finished adaptive for mobile

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="my-works">
+        <section class="my-works">
             <div class="container">
                 <div class="my-works__content">
                     <div class="wrapper-context-title">
@@ -213,8 +213,8 @@
                     </div>
                 </div>
             </div>
-        </section> -->
-    <!-- <footer class="footer">
+        </section>
+    <footer class="footer">
         <div class="container">
             <div class="footer__content">
                 <div class="footer__description">
@@ -303,6 +303,6 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
