feated: mobile-menu for script

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
                             </svg>     
                     </div>
                 </div>
-                <div class="header__menu">
+                <nav class="header__menu">
                     <ul class="header__menu-list">
                         <li>About Me</li>
                         <li>Skills</li>
                         <li>Pet-Projects</li>
                         <li>Contacts</li>
                     </ul>
-                </div>
+                </nav>
             </div>
         
         </div>
-        <div class="mobile-menu">
+        <div class="mobile-header">
             <div class="wrapper-logo">
                 <div class="logo">
                     <svg width="144" height="28" viewBox="0 0 144 28" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -46,6 +46,14 @@
                 <span class="burger-line"></span>
                 <span class="burger-line"></span>
             </button>
+            <nav class="mobile-menu">
+                <ul class="mobile-menu__list">
+                    <li>About Me</li>
+                    <li>Skills</li>
+                    <li>Pet-Projects</li>
+                    <li>Contacts</li>
+                </ul>
+            </nav>
         </div>
     </header>
     <section class="preview">
@@ -304,5 +312,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 </html>
