feated: mobile menu and button-burger

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 
                 <div class="author">
                     <div class="wrapper-main-title">
-                        <h1 class="main-title">Alexey Borisov</h1>
+                        <h1 class="main-title">Arseniy Sckidina</h1>
                     </div>
                     <div class="wrapper-main-subtitle">
                         <h2 class="main-subtitle">Frontend Developer</h2>
