feat: I continue to work on the card

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         </div>
                     </div>
 
-                    <div class="card-skill">
+                    <div class="card-skill active">
                         <div class="card-skill__front">
                             <div class="card-skill__holder-img">
                                 <svg width="114" height="129" viewBox="0 0 114 129" fill="none" xmlns="http://www.w3.org/2000/svg">
