--- a/index.html
+++ b/index.html
@@ -123,12 +123,14 @@
                             <button class="context-button context-button--html">HTML5</button>
                         </div>
                         <div class="card-skill__back">
-                            <button class="close"></button>
+                            <button class="close">
+                                <img src="./image/icon/cross.svg" alt="">
+                            </button>
                             <p class="card-skill__description"></p>
                         </div>
                     </div>
 
-                    <div class="card-skill active">
+                    <div class="card-skill">
                         <div class="card-skill__front">
                             <div class="card-skill__holder-img">
                                 <svg width="114" height="129" viewBox="0 0 114 129" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -139,7 +141,9 @@
                         </div>
                         
                         <div class="card-skill__back">
-                            <button class="close"></button>
+                            <button class="close">
+                                <img src="./image/icon/cross.svg" alt="">
+                            </button>
                             <p class="card-skill__description"></p>
                         </div>
                     </div>
@@ -155,7 +159,9 @@
                         </div>
 
                         <div class="card-skill__back">
-                            <button class="close"></button>
+                            <button class="close">
+                                <img src="./image/icon/cross.svg" alt="">
+                            </button>
                             <p class="card-skill__description"></p>
                         </div>
                     </div>
@@ -171,7 +177,9 @@
                         </div>
 
                         <div class="card-skill__back">
-                            <button class="close"></button>
+                            <button class="close">
+                                <img src="./image/icon/cross.svg" alt="">
+                            </button>
                             <p class="card-skill__description"></p>
                         </div>
                     </div>
@@ -186,7 +194,9 @@
                             <button class="context-button context-button--git">Git</button>
                         </div>
                         <div class="card-skill__back">
-                            <button class="close"></button>
+                            <button class="close">
+                                <img src="./image/icon/cross.svg" alt="">
+                            </button>
                             <p class="card-skill__description"></p>
                         </div>
                     </div>
@@ -357,5 +367,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/animation.js"></script>
+    <script src="./js/cards.js"></script>
 </body>
 </html>
