--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="fade-block"></div>
     <header class="header">
         <div class="container">
             <div class="header__content">
