feat: finished section skill-card

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <button class="close">
                                 <img src="./image/icon/cross.svg" alt="">
                             </button>
-                            <p class="card-skill__description"></p>
+                            <p class="card-skill__description">HTML—язык гипертекстовой разметки документов для просмотра веб-страниц в браузере.</p>
                         </div>
                     </div>
 
@@ -145,7 +145,7 @@
                             <button class="close">
                                 <img src="./image/icon/cross.svg" alt="">
                             </button>
-                            <p class="card-skill__description"></p>
+                            <p class="card-skill__description">CSS—формальный язык декорирования и описания внешнего вида веб-страницы, написанной с использованием языка разметки (чаще всего HTML).</p>
                         </div>
                     </div>
 
@@ -163,7 +163,7 @@
                             <button class="close">
                                 <img src="./image/icon/cross.svg" alt="">
                             </button>
-                            <p class="card-skill__description"></p>
+                            <p class="card-skill__description">SCSS—это метаязык на основе CSS, предназначенный для увеличения уровня абстракции CSS-кода и упрощения файлов каскадных таблиц стилей.</p>
                         </div>
                     </div>
 
@@ -181,7 +181,7 @@
                             <button class="close">
                                 <img src="./image/icon/cross.svg" alt="">
                             </button>
-                            <p class="card-skill__description"></p>
+                            <p class="card-skill__description">JavaScript—мультипарадигменный язык программирования. Поддерживает объектно-ориентированный, императивный и функциональный стили.</p>
                         </div>
                     </div>
 
@@ -198,7 +198,7 @@
                             <button class="close">
                                 <img src="./image/icon/cross.svg" alt="">
                             </button>
-                            <p class="card-skill__description"></p>
+                            <p class="card-skill__description">Git—распределённая система управления версиями. Проект был создан Линусом Торвальдсом для управления разработкой ядра Linux, первая версия выпущена 7 апреля 2005 года.</p>
                         </div>
                     </div>
 
