feat:started creating the slider section

--- a/index.html
+++ b/index.html
@@ -273,6 +273,19 @@
                 </div>
             </div>
         </section>
+        <section class="review">
+            <div class="container">
+                <div class="review__content">
+
+                    <div class="slider-review">
+                        <div class="slider-review__slide"></div>
+                        <div class="slider-review__slide"></div>
+                        <div class="slider-review__slide"></div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     <footer class="footer">
         <div class="container">
             <div class="footer__content">
@@ -366,8 +379,10 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/main.js"></script>
     <script src="./js/animation.js"></script>
     <script src="./js/cards.js"></script>
+    <script src="./js/slider.js"></script>
 </body>
 </html>
