feat: created buttons for slider

--- a/index.html
+++ b/index.html
@@ -278,9 +278,18 @@
                 <div class="review__content">
 
                     <div class="slider-review">
-                        <div class="slider-review__slide"></div>
-                        <div class="slider-review__slide"></div>
-                        <div class="slider-review__slide"></div>
+                        <div class="slider-review__slide">
+                            <!-- <img src="" alt="">
+                            <p>A very impressive portfolio site! Your choice of colors, fonts and compositions creates a harmonious atmosphere and allows you to fully immerse yourself in the world of your work. I would also like to point out the usability of your site - all informative sections are easily accessible and the information is presented clearly. It is obvious that you have great creative potential!</p> -->
+                        </div>
+                        <div class="slider-review__slide">
+                            <!-- <img src="" alt="">
+                            <p>The portfolio site is simply amazing! I found him very inspiring and motivating. Your work demonstrates your professionalism and passion for what you do. I would also like to point out that your site is fully responsive and displays perfectly on all devices. It really helps you attract a wide audience and increase your visibility.</p> -->
+                        </div>
+                        <div class="slider-review__slide">
+                            <!-- <img src="" alt="">
+                            <p>The portfolio site is simply amazing! I found him very inspiring and motivating. Your work demonstrates your professionalism and passion for what you do. I would also like to point out that your site is fully responsive and displays perfectly on all devices. It really helps you attract a wide audience and increase your visibility.</p> -->
+                        </div>
                     </div>
 
                 </div>
