--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                     </div>
                     <ul class="social-list">
                         <li class="social-list__item">
-                            <a href="#!" class="social-link">
+                            <a href="mailto:gorobchyk@bk.com" class="social-link">
                                 <span class="social-link__img">
                                     <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <g id="contact_mail 1">
@@ -328,7 +328,7 @@
                             </a>
                         </li>
                         <li class="social-list__item">
-                            <a href="#!" class="social-link">
+                            <a href="https://github.com/ArseniySchkidina" class="social-link">
                                 <span class="social-link__img">
                                     <svg c width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <g id="contact_github 1" clip-path="url(#clip0_48_19)">
@@ -347,7 +347,7 @@
                             </a>
                         </li>
                         <li class="social-list__item">
-                            <a href="#!" class="social-link">
+                            <a href="https://vk.com/shkidina" class="social-link">
                                 <span class="social-link__img">
                                     <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <g id="contact_vk 1">
@@ -360,22 +360,11 @@
                             </a>
                         </li>
                         <li class="social-list__item">
-                            <a href="#!" class="social-link">
+                            <a href="https://t.me/froudobaggins" class="social-link">
                                 <span class="social-link__img">
-                                    <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <g id="akar-icons:figma-fill" clip-path="url(#clip0_49_33)">
-                                        <g id="Group">
-                                        <g id="Group_2">
-                                        <path class="color-svg" id="Vector" fill-rule="evenodd" clip-rule="evenodd" d="M11.72 0.790283C8.45734 0.790283 5.83334 3.52762 5.83334 6.88095C5.83334 8.91962 6.804 10.7303 8.296 11.8356C7.52704 12.4117 6.90375 13.16 6.47609 14.0204C6.04843 14.8808 5.8283 15.8295 5.83334 16.7903C5.83334 18.8303 6.804 20.6396 8.296 21.7449C7.52704 22.3211 6.90375 23.0693 6.47609 23.9297C6.04843 24.7902 5.8283 25.7388 5.83334 26.6996C5.83334 30.0529 8.45734 32.7903 11.72 32.7903C14.9813 32.7903 17.6067 30.0529 17.6067 26.6996V21.5503C18.6378 22.41 19.9375 22.8813 21.28 22.8823C24.5427 22.881 27.1667 20.1436 27.1667 16.7903C27.172 15.8294 26.952 14.8807 26.5243 14.0202C26.0967 13.1597 25.4732 12.4115 24.704 11.8356C25.473 11.2595 26.0963 10.5112 26.5239 9.65083C26.9516 8.79042 27.1717 7.84177 27.1667 6.88095C27.1667 3.52762 24.5427 0.790283 21.28 0.790283H11.72ZM8.04534 6.88095C8.04534 4.75962 9.70134 3.06095 11.72 3.06095H15.3933V10.701H11.72C9.70134 10.701 8.04534 9.00095 8.04534 6.88095ZM21.28 10.6996H17.6067V3.05962H21.28C23.3 3.05962 24.9547 4.75962 24.9547 6.88095C24.9547 9.00095 23.3 10.6996 21.28 10.6996ZM8.04667 16.7903C8.04667 14.6703 9.70267 12.9703 11.7213 12.9703H15.3947V20.6103H11.72C9.7 20.6103 8.04534 18.9103 8.04534 16.7903H8.04667ZM17.6067 16.7903C17.6067 14.6703 19.2627 12.9703 21.2813 12.9703C23.3013 12.9703 24.956 14.669 24.956 16.7903C24.956 18.9103 23.3013 20.6103 21.2813 20.6103C19.2627 20.6103 17.608 18.9116 17.608 16.7903H17.6067ZM8.04667 26.6996C8.04667 24.5796 9.70267 22.881 11.7213 22.881H15.3947V26.6996C15.3947 28.8209 13.7413 30.5196 11.7213 30.5196C9.70267 30.5196 8.04667 28.8209 8.04667 26.6996Z" fill="#F0E3CA"/>
-                                        </g>
-                                        </g>
-                                        </g>
-                                        <defs>
-                                        <clipPath id="clip0_49_33">
-                                        <rect width="32" height="32" fill="white" transform="translate(0.5 0.790283)"/>
-                                        </clipPath>
-                                        </defs>
-                                        </svg>
+                                    <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M81.6146 20.8667C85.1291 20.8667 86.0541 23.525 85.0146 29.7667C83.825 36.9042 80.3979 60.5355 77.6646 75.2459C76.6187 80.875 74.7333 83.3021 71.9896 83.3021C70.4812 83.3021 68.7146 82.5688 66.6854 81.2292C63.9354 79.4125 50.0521 70.2313 47.0375 68.075C44.2875 66.1104 40.4937 63.7459 45.2521 59.0917C46.9458 57.4334 58.0437 46.8354 66.6896 38.5875C67.6125 37.7063 66.8396 36.3625 65.8146 36.3625C65.5812 36.3625 65.3333 36.4334 65.0916 36.5938C53.4375 44.3229 37.2771 55.05 35.2208 56.4479C33.1646 57.8438 31.1604 58.7396 28.4896 58.7396C27.125 58.7396 25.5854 58.5063 23.775 57.9855C19.7271 56.823 15.775 55.4375 14.2354 54.9084C8.30832 52.875 9.71457 50.2396 15.4708 47.7063C38.55 37.5542 68.4146 25.175 72.5375 23.4625C76.5542 21.7938 79.5375 20.8667 81.6146 20.8667ZM81.6146 14.6167C78.7646 14.6167 75.3333 15.5354 70.1437 17.6875L69.5208 17.9459C47.3646 27.1459 27.275 35.6834 12.9542 41.9834C10.7167 42.9688 3.9104 45.9625 4.17498 52.225C4.28748 54.9271 5.77498 58.6104 12.2083 60.8167L12.6833 60.9792C14.4792 61.598 18.2187 62.8875 22.0521 63.9896C24.3854 64.6605 26.4937 64.9855 28.4916 64.9855C31.9583 64.9855 34.6437 63.9959 36.7437 62.8438C36.7333 63.1938 36.7416 63.5459 36.7687 63.9C37.1479 68.7167 40.8729 71.3584 43.0979 72.9375L43.4083 73.1584C46.6937 75.5084 61.5625 85.3313 63.2458 86.4417C66.4146 88.5334 69.275 89.548 71.9937 89.548C76.2687 89.548 81.7916 87.2646 83.8125 76.3855C85.7312 66.0667 87.9479 51.6521 89.5667 41.1271C90.2562 36.6354 90.8229 32.9521 91.1833 30.7917C91.9104 26.4292 92.2437 21.4875 89.2083 17.9063C87.9333 16.4063 85.5833 14.6167 81.6146 14.6167Z" fill="#F0E3CA"/>
+                                        </svg>                                        
                                 </span>
                                 <span class="social-link__description">Ontalex</span>
                             </a>
