feat: error with skill-cards

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                             <button class="close">
                                 <img src="./image/icon/cross.svg" alt="">
                             </button>
-                            <p class="card-skill__description">SCSS—это метаязык на основе CSS, предназначенный для увеличения уровня абстракции CSS-кода и упрощения файлов каскадных таблиц стилей.</p>
+                            <p class="card-skill__description">JavaScript—мультипарадигменный язык программирования. Поддерживает объектно-ориентированный, императивный и функциональный стили.</p>
                         </div>
                     </div>
 
@@ -181,7 +181,7 @@
                             <button class="close">
                                 <img src="./image/icon/cross.svg" alt="">
                             </button>
-                            <p class="card-skill__description">JavaScript—мультипарадигменный язык программирования. Поддерживает объектно-ориентированный, императивный и функциональный стили.</p>
+                            <p class="card-skill__description">SCSS—это метаязык на основе CSS, предназначенный для увеличения уровня абстракции CSS-кода и упрощения файлов каскадных таблиц стилей.</p>
                         </div>
                     </div>
 
@@ -279,16 +279,16 @@
 
                     <div class="slider-review">
                         <div class="slider-review__slide">
-                            <!-- <img src="" alt="">
-                            <p>A very impressive portfolio site! Your choice of colors, fonts and compositions creates a harmonious atmosphere and allows you to fully immerse yourself in the world of your work. I would also like to point out the usability of your site - all informative sections are easily accessible and the information is presented clearly. It is obvious that you have great creative potential!</p> -->
+                            <div class="slider-review__avatar"><img src="" alt=""></div>
+                            <p class="slider-review__text">A very impressive portfolio site! Your choice of colors, fonts and compositions creates a harmonious atmosphere and allows you to fully immerse yourself in the world of your work. I would also like to point out the usability of your site - all informative sections are easily accessible and the information is presented clearly. It is obvious that you have great creative potential!</p>
                         </div>
                         <div class="slider-review__slide">
-                            <!-- <img src="" alt="">
-                            <p>The portfolio site is simply amazing! I found him very inspiring and motivating. Your work demonstrates your professionalism and passion for what you do. I would also like to point out that your site is fully responsive and displays perfectly on all devices. It really helps you attract a wide audience and increase your visibility.</p> -->
+                            <div class="slider-review__avatar"><img src="" alt=""></div>
+                            <p class="slider-review__text">The portfolio site is simply amazing! I found him very inspiring and motivating. Your work demonstrates your professionalism and passion for what you do. I would also like to point out that your site is fully responsive and displays perfectly on all devices. It really helps you attract a wide audience and increase your visibility.</p>
                         </div>
                         <div class="slider-review__slide">
-                            <!-- <img src="" alt="">
-                            <p>The portfolio site is simply amazing! I found him very inspiring and motivating. Your work demonstrates your professionalism and passion for what you do. I would also like to point out that your site is fully responsive and displays perfectly on all devices. It really helps you attract a wide audience and increase your visibility.</p> -->
+                            <div class="slider-review__avatar"><img src="" alt=""></div>
+                            <p class="slider-review__text">The portfolio site is simply amazing! I found him very inspiring and motivating. Your work demonstrates your professionalism and passion for what you do. I would also like to point out that your site is fully responsive and displays perfectly on all devices. It really helps you attract a wide audience and increase your visibility.</p>
                         </div>
                     </div>
 
