feat: finished slider

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 
                 <div class="author">
                     <div class="wrapper-main-title">
-                        <h1 class="main-title">Arseniy Sckidina</h1>
+                        <h1 class="main-title">Arseniy Schkidina</h1>
                     </div>
                     <div class="wrapper-main-subtitle">
                         <h2 class="main-subtitle">Frontend Developer</h2>
@@ -279,17 +279,36 @@
 
                     <div class="slider-review">
                         <div class="slider-review__slide">
-                            <div class="slider-review__avatar"><img src="" alt=""></div>
-                            <p class="slider-review__text">A very impressive portfolio site! Your choice of colors, fonts and compositions creates a harmonious atmosphere and allows you to fully immerse yourself in the world of your work. I would also like to point out the usability of your site - all informative sections are easily accessible and the information is presented clearly. It is obvious that you have great creative potential!</p>
+                            <div class="slider-review__top">
+                                <div class="slider-review__avatar"><img src="./image/review/carl.jpg" alt=""></div>
+                                <div class="slider-review__nickname">
+                                    <p class="slider-review__name">Carl Marx</p>
+                                    <p class="slider-review__job">The creator of socialism</p>
+                                </div>
+                            </div>
+                            <p class="slider-review__text">A very impressive portfolio site! Your choice of colors, fonts and compositions creates a harmonious atmosphere and allows you to fully immerse yourself in the world of your work. I would also like to point out the usability of your site - all informative sections are easily accessible and the information is presented clearly. It is obvious that you have great creative potential! Glory to socialism!</p>
                         </div>
                         <div class="slider-review__slide">
-                            <div class="slider-review__avatar"><img src="" alt=""></div>
-                            <p class="slider-review__text">The portfolio site is simply amazing! I found him very inspiring and motivating. Your work demonstrates your professionalism and passion for what you do. I would also like to point out that your site is fully responsive and displays perfectly on all devices. It really helps you attract a wide audience and increase your visibility.</p>
+                            <div class="slider-review__top">
+                                <div class="slider-review__avatar"><img src="./image/review/bas.jpg" alt=""></div>
+                                <div class="slider-review__nickname">
+                                    <p class="slider-review__name">Nikolay Baskow</p>
+                                    <p class="slider-review__job">Russian's singer</p>
+                                </div>
+                            </div>
+                            <p class="slider-review__text">With delight! The created website is a real work of art that combines elegance and modern technology. Your talent and skill make the world brighter and more colorful!</p>
                         </div>
                         <div class="slider-review__slide">
-                            <div class="slider-review__avatar"><img src="" alt=""></div>
-                            <p class="slider-review__text">The portfolio site is simply amazing! I found him very inspiring and motivating. Your work demonstrates your professionalism and passion for what you do. I would also like to point out that your site is fully responsive and displays perfectly on all devices. It really helps you attract a wide audience and increase your visibility.</p>
+                            <div class="slider-review__top">
+                                <div class="slider-review__avatar"><img src="./image/review/gjwaMKKbfkhbptjqPKO2Sfu175vbHKRZE7mVsMU_ps7LVMOC85BuCR_SvGOl9C8UzZ0Wsn7N.jpg" alt=""></div>
+                                <div class="slider-review__nickname">
+                                    <p class="slider-review__name">General Tullius</p>
+                                    <p class="slider-review__job">General of the Imperial Legion</p>
+                                </div>
+                            </div>
+                            <p class="slider-review__text">Great job! The site exceeded all my expectations, reflecting the greatness and power of the Roman Empire. Thank you for your speed and professionalism. Long live the Imperial Legion!</p>
                         </div>
+                        
                     </div>
 
                 </div>
