--- a/index.html
+++ b/index.html
@@ -314,6 +314,29 @@
                 </div>
             </div>
         </section>
+        <section class="contact-form">
+            <div class="container">
+                <div class="contact-form__content">
+                    <form class="form" action="">
+                        <div class="form__item">
+                            <input class="form__input" type="text">
+                            <span class="form__fake-placeholder"></span>
+                        </div>
+                        <div class="form__item">
+                            <input class="form__input" type="text">
+                            <span class="form__fake-placeholder"></span>
+                        </div>
+                        <div class="form__item">
+                            <textarea class="form__input form__input--message" name="" id="" cols="30" rows="10"></textarea>
+                            <span class="form__fake-placeholder"></span>
+                        </div>
+                        <div class="wrapper-btn">
+                            <input class="input-submit" type="submit">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     <footer class="footer">
         <div class="container">
             <div class="footer__content">
