feat: button send

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             <span class="form__fake-placeholder"></span>
                         </div>
                         <div class="wrapper-btn">
-                            <input class="input-submit" type="submit">
+                            <input class="input-submit" type="submit" value="Send">
                         </div>
                     </form>
                 </div>
