--- a/index.html
+++ b/index.html
@@ -320,15 +320,15 @@
                     <form class="form" action="">
                         <div class="form__item">
                             <input class="form__input" type="text">
-                            <span class="form__fake-placeholder"></span>
+                            <span class="form__fake-placeholder">name</span>
                         </div>
                         <div class="form__item">
-                            <input class="form__input" type="text">
-                            <span class="form__fake-placeholder"></span>
+                            <input class="form__input" type="email">
+                            <span class="form__fake-placeholder">e-mail</span>
                         </div>
                         <div class="form__item">
                             <textarea class="form__input form__input--message" name="" id="" cols="30" rows="10"></textarea>
-                            <span class="form__fake-placeholder"></span>
+                            <span class="form__fake-placeholder form__fake-placeholder--message">message</span>
                         </div>
                         <div class="wrapper-btn">
                             <input class="input-submit" type="submit" value="Send">
