feat: add event focus for inputs

--- a/index.html
+++ b/index.html
@@ -320,15 +320,15 @@
                     <form class="form" action="">
                         <div class="form__item">
                             <input class="form__input" type="text">
-                            <span class="form__fake-placeholder">name</span>
+                            <span class="form__fake-placeholder">Name</span>
                         </div>
                         <div class="form__item">
                             <input class="form__input" type="email">
-                            <span class="form__fake-placeholder">e-mail</span>
+                            <span class="form__fake-placeholder">E-mail</span>
                         </div>
                         <div class="form__item">
                             <textarea class="form__input form__input--message" name="" id="" cols="30" rows="10"></textarea>
-                            <span class="form__fake-placeholder form__fake-placeholder--message">message</span>
+                            <span class="form__fake-placeholder form__fake-placeholder--message">Message</span>
                         </div>
                         <div class="wrapper-btn">
                             <input class="input-submit" type="submit" value="Send">
@@ -424,5 +424,6 @@
     <script src="./js/animation.js"></script>
     <script src="./js/cards.js"></script>
     <script src="./js/slider.js"></script>
+    <script src="./js/contact-form.js"></script>
 </body>
 </html>
