created scroll for form__input--message

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                             <span class="form__fake-placeholder">E-mail</span>
                         </div>
                         <div class="form__item">
-                            <textarea class="form__input form__input--message" name="" id="" cols="30" rows="10"></textarea>
+                            <textarea class="form__input form__input--message" name="" id="" cols="30" rows="10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas velit impedit numquam tenetur aliquid, incidunt fugiat adipisci aliquam eius inventore commodi, beatae dolor facere consectetur quae nesciunt quos nemo eligendi. Aut nesciunt saepe aspernatur vero accusamus iste quasi odit quisquam vel eaque consequuntur harum, vitae illo aliquid exercitationem tempora, modi perspiciatis dolorem consectetur! Quod vero amet, vitae exercitationem necessitatibus cupiditate quisquam voluptatem repellat nobis recusandae facilis aperiam dolor expedita debitis quaerat, distinctio et? Impedit nesciunt nobis quo nostrum at velit quas consequatur nisi, commodi ab architecto facere consequuntur, blanditiis, iusto cupiditate voluptatibus sed fuga quam quibusdam beatae vel rerum. Soluta?</textarea>
                             <span class="form__fake-placeholder form__fake-placeholder--message">Message</span>
                         </div>
                         <div class="wrapper-btn">
