feat: created anchor links

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
                 </div>
                 <nav class="header__menu">
                     <ul class="header__menu-list">
-                        <li>About Me</li>
-                        <li>Skills</li>
-                        <li>Pet-Projects</li>
-                        <li>Contacts</li>
+                        <li><a href="#aboutMe">About Me</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#petProjects">Pet-Projects</a></li>
+                        <li><a href="#review">Review</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
                     </ul>
                 </nav>
             </div>
@@ -49,10 +50,11 @@
             </button>
             <nav class="mobile-menu">
                 <ul class="mobile-menu__list">
-                    <li>About Me</li>
-                    <li>Skills</li>
-                    <li>Pet-Projects</li>
-                    <li>Contacts</li>
+                        <li><a href="#aboutMe">About Me</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#petProjects">Pet-Projects</a></li>
+                        <li><a href="#review">Review</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -92,7 +94,7 @@
                 </div>
             </div>
         </section>    
-        <section class="about-me">
+        <section class="about-me" id="aboutMe">
             <div class="container">
                 <h6 class="visually-hidden"></h6>
                 <div class="about-me__content">
@@ -105,7 +107,7 @@
                 </div>
             </div>
         </section>
-        <section class="my-skills">
+        <section class="my-skills" id="skills">
             <div class="container"></div>
             <div class="my-skills__content">
                 <div class="wrapper-context-title">
@@ -205,7 +207,7 @@
                 </div>
             </div>
         </section>
-        <section class="my-works">
+        <section class="my-works" id="petProjects">
             <div class="container">
                 <div class="my-works__content">
                     <div class="wrapper-context-title">
@@ -273,7 +275,7 @@
                 </div>
             </div>
         </section>
-        <section class="review">
+        <section class="review" id="review">
             <div class="container">
                 <div class="review__content">
 
@@ -314,7 +316,7 @@
                 </div>
             </div>
         </section>
-        <section class="contact-form">
+        <section class="contact-form" id="contacts">
             <div class="container">
                 <div class="contact-form__content">
                     <form class="form" method="post" action="./php/mail.php" id="form">
