feat: created anchor links for mobile-menu

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 </div>
                 <nav class="header__menu">
                     <ul class="header__menu-list">
-                        <li><a href="#aboutMe">About Me</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#petProjects">Pet-Projects</a></li>
-                        <li><a href="#review">Review</a></li>
-                        <li><a href="#contacts">Contacts</a></li>
+                        <li><a href="#aboutMe" class="anchor-link">About Me</a></li>
+                        <li><a href="#skills" class="anchor-link">Skills</a></li>
+                        <li><a href="#petProjects" class="anchor-link">Pet-Projects</a></li>
+                        <li><a href="#review" class="anchor-link">Review</a></li>
+                        <li><a href="#contacts" class="anchor-link">Contacts</a></li>
                     </ul>
                 </nav>
             </div>
@@ -50,11 +50,11 @@
             </button>
             <nav class="mobile-menu">
                 <ul class="mobile-menu__list">
-                        <li><a href="#aboutMe">About Me</a></li>
-                        <li><a href="#skills">Skills</a></li>
-                        <li><a href="#petProjects">Pet-Projects</a></li>
-                        <li><a href="#review">Review</a></li>
-                        <li><a href="#contacts">Contacts</a></li>
+                        <li><a href="#aboutMe" class="anchor-link">About Me</a></li>
+                        <li><a href="#skills" class="anchor-link">Skills</a></li>
+                        <li><a href="#petProjects" class="anchor-link">Pet-Projects</a></li>
+                        <li><a href="#review" class="anchor-link">Review</a></li>
+                        <li><a href="#contacts" class="anchor-link">Contacts</a></li>
                 </ul>
             </nav>
         </div>
