refactor: created responsive adaptive for header

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" href="./image/favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="./image/favicon/png-clipart-career-portfolio-portfolio-icon-cdr-angle (1).png">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./sass/main.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -59,7 +59,7 @@
             </nav>
         </div>
     </header>
-    <section class="preview">
+    <!-- <section class="preview">
         <div class="container">
             <div class="preview__content">
                 
@@ -93,8 +93,8 @@
                     </div>
                 </div>
             </div>
-        </section>    
-        <section class="about-me" id="aboutMe">
+        </section>     -->
+        <!-- <section class="about-me" id="aboutMe">
             <div class="container">
                 <h6 class="visually-hidden"></h6>
                 <div class="about-me__content">
@@ -106,8 +106,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="my-skills" id="skills">
+        </section> -->
+        <!-- <section class="my-skills" id="skills">
             <div class="container"></div>
             <div class="my-skills__content">
                 <div class="wrapper-context-title">
@@ -206,8 +206,8 @@
 
                 </div>
             </div>
-        </section>
-        <section class="my-works" id="petProjects">
+        </section> -->
+        <!-- <section class="my-works" id="petProjects">
             <div class="container">
                 <div class="my-works__content">
                     <div class="wrapper-context-title">
@@ -274,8 +274,8 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="review" id="review">
+        </section> -->
+        <!-- <section class="review" id="review">
             <div class="container">
                 <div class="review__content">
 
@@ -315,8 +315,8 @@
 
                 </div>
             </div>
-        </section>
-        <section class="contact-form" id="contacts">
+        </section> -->
+        <!-- <section class="contact-form" id="contacts">
             <div class="container">
                 <div class="contact-form__content">
                     <form class="form" method="post" action="./php/mail.php" id="form">
@@ -341,8 +341,8 @@
 
                 </div>
             </div>
-        </section>
-    <footer class="footer">
+        </section> -->
+    <!-- <footer class="footer">
         <div class="container">
             <div class="footer__content">
                 <div class="footer__description">
@@ -420,7 +420,7 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
