refactor: redactive section preview for size 1024px

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </nav>
         </div>
     </header>
-    <!-- <section class="preview">
+    <section class="preview">
         <div class="container">
             <div class="preview__content">
                 
@@ -78,7 +78,7 @@
                     <div id="code" class="avatar__background">
                         <picture>
                             <source srcset="./image/preview/avatar-background-mobile.png" media="(max-width: 662px)">
-                            <img srcset="./image/preview/avatar-background-desktop.png" alt="bg">
+                            <img class="avatar__code" srcset="./image/preview/avatar-background-desktop.png" alt="bg">
                         </picture>
                     </div>
                     <div class="avatar__photo">
@@ -93,8 +93,8 @@
                     </div>
                 </div>
             </div>
-        </section>     -->
-        <!-- <section class="about-me" id="aboutMe">
+        </section>    
+    <!-- <section class="about-me" id="aboutMe">
             <div class="container">
                 <h6 class="visually-hidden"></h6>
                 <div class="about-me__content">
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </section> -->
-        <!-- <section class="my-skills" id="skills">
+    <!-- <section class="my-skills" id="skills">
             <div class="container"></div>
             <div class="my-skills__content">
                 <div class="wrapper-context-title">
@@ -207,7 +207,7 @@
                 </div>
             </div>
         </section> -->
-        <!-- <section class="my-works" id="petProjects">
+    <!-- <section class="my-works" id="petProjects">
             <div class="container">
                 <div class="my-works__content">
                     <div class="wrapper-context-title">
@@ -275,7 +275,7 @@
                 </div>
             </div>
         </section> -->
-        <!-- <section class="review" id="review">
+    <!-- <section class="review" id="review">
             <div class="container">
                 <div class="review__content">
 
@@ -316,7 +316,7 @@
                 </div>
             </div>
         </section> -->
-        <!-- <section class="contact-form" id="contacts">
+    <!-- <section class="contact-form" id="contacts">
             <div class="container">
                 <div class="contact-form__content">
                     <form class="form" method="post" action="./php/mail.php" id="form">
